[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/scripts/back_button.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/dynamic_fonts/64.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/dynamic_fonts/32.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/scripts/options_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/toggle_switch/toggle_switch_off.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/toggle_switch/toggle_switch_on.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/toggle_switch/toggle_switch_disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/set_input_button/set_input_button_tap.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/back_button/back_button.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/apply_button/apply_button.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/set_input_button/set_input_button_set.png" type="Texture" id=11]

[sub_resource type="Theme" id=1]
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 9
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null

[sub_resource type="StyleBoxEmpty" id=2]

[node name="OptionsMenuContainer" type="VBoxContainer"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 1.60001
margin_top = -4.0
margin_right = 1.59998
margin_bottom = -3.68005
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="HBoxContainer" parent="."]
margin_right = 819.0
margin_bottom = 327.0
alignment = 1

[node name="VideoSettingsContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_left = 1.0
margin_right = 233.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer"]
margin_right = 232.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "VIDEO    "
uppercase = true

[node name="FullScreenContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 55.0
margin_right = 232.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/FullScreenContainer"]
margin_top = 3.0
margin_right = 156.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Full Screen  "

[node name="FullScreenButton" type="TextureButton" parent="SettingsContainer/VideoSettingsContainer/FullScreenContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 32.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="BorderlessContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 91.0
margin_right = 232.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/BorderlessContainer"]
margin_top = 3.0
margin_right = 156.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Borderless   "

[node name="BorderlessButton" type="TextureButton" parent="SettingsContainer/VideoSettingsContainer/BorderlessContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 32.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[node name="VSYNCContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 127.0
margin_right = 232.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/VSYNCContainer"]
margin_top = 3.0
margin_right = 156.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "VSYNC        "

[node name="VSYNCButton" type="TextureButton" parent="SettingsContainer/VideoSettingsContainer/VSYNCContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 32.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="ResolutionContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 163.0
margin_right = 232.0
margin_bottom = 189.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/ResolutionContainer"]
margin_right = 120.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Resolution"

[node name="ResolutionLine" type="LineEdit" parent="SettingsContainer/VideoSettingsContainer/ResolutionContainer"]
margin_left = 124.0
margin_right = 232.0
margin_bottom = 26.0
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "1920x1080"
max_length = 9

[node name="BrightnessContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
visible = false
margin_top = 193.0
margin_right = 232.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/BrightnessContainer"]
margin_right = 120.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Brightness"

[node name="LineEdit" type="LineEdit" parent="SettingsContainer/VideoSettingsContainer/BrightnessContainer"]
margin_left = 124.0
margin_right = 232.0
margin_bottom = 26.0
theme = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
max_length = 3

[node name="FOVContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 193.0
margin_right = 232.0
margin_bottom = 219.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/FOVContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "FOV          "

[node name="FOVSlider" type="HSlider" parent="SettingsContainer/VideoSettingsContainer/FOVContainer"]
margin_left = 160.0
margin_right = 232.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 70.0
max_value = 120.0
value = 90.0
scrollable = false

[node name="AntiAliasingContainer" type="HBoxContainer" parent="SettingsContainer/VideoSettingsContainer"]
margin_top = 223.0
margin_right = 232.0
margin_bottom = 249.0

[node name="Label" type="Label" parent="SettingsContainer/VideoSettingsContainer/AntiAliasingContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Anti-Aliasing"

[node name="AntiAliasingSlider" type="HSlider" parent="SettingsContainer/VideoSettingsContainer/AntiAliasingContainer"]
margin_left = 160.0
margin_right = 232.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 4.0
rounded = true
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="ControlsSettingsContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_left = 237.0
margin_right = 525.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer"]
margin_right = 288.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "CONTROLS    "

[node name="ForwardContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 55.0
margin_right = 288.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/ForwardContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Forward "

[node name="ForwardButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/ForwardContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="ForwardText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/ForwardContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|W"
max_lines_visible = 1

[node name="BackwardContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 91.0
margin_right = 288.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/BackwardContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Backward"

[node name="BackwardButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/BackwardContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="BackwardText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/BackwardContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|S"

[node name="LeftContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 127.0
margin_right = 288.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/LeftContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Left    "

[node name="LeftButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/LeftContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="LeftText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/LeftContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|A"

[node name="RightContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 163.0
margin_right = 288.0
margin_bottom = 195.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/RightContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Right   "

[node name="RightButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/RightContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="RightText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/RightContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|D"

[node name="JumpContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 199.0
margin_right = 288.0
margin_bottom = 231.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/JumpContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Jump    "

[node name="JumpButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/JumpContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="JumpText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/JumpContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 224.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|Space"

[node name="DashContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 235.0
margin_right = 288.0
margin_bottom = 267.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/DashContainer"]
margin_top = 3.0
margin_right = 96.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Dash    "

[node name="DashButton" type="TextureButton" parent="SettingsContainer/ControlsSettingsContainer/DashContainer"]
margin_left = 100.0
margin_right = 148.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )

[node name="DashText" type="Label" parent="SettingsContainer/ControlsSettingsContainer/DashContainer"]
margin_left = 152.0
margin_top = 3.0
margin_right = 224.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "|Shift"

[node name="SensitivityXContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 271.0
margin_right = 288.0
margin_bottom = 297.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/SensitivityXContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Sensitivity X"

[node name="SensitivityXSlider" type="HSlider" parent="SettingsContainer/ControlsSettingsContainer/SensitivityXContainer"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 10.0
step = 0.002
value = 1.0
exp_edit = true

[node name="SensitivityYContainer" type="HBoxContainer" parent="SettingsContainer/ControlsSettingsContainer"]
margin_top = 301.0
margin_right = 288.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="SettingsContainer/ControlsSettingsContainer/SensitivityYContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Sensitivity Y"

[node name="SensitivityYSlider" type="HSlider" parent="SettingsContainer/ControlsSettingsContainer/SensitivityYContainer"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.1
max_value = 10.0
step = 0.002
value = 1.0
exp_edit = true

[node name="AudioSettingsContainer" type="VBoxContainer" parent="SettingsContainer"]
margin_left = 529.0
margin_right = 817.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="SettingsContainer/AudioSettingsContainer"]
margin_right = 288.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "AUDIO       "

[node name="MasterVolumeContainer" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer"]
margin_top = 55.0
margin_right = 288.0
margin_bottom = 81.0

[node name="Label" type="Label" parent="SettingsContainer/AudioSettingsContainer/MasterVolumeContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/MasterVolumeContainer"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
scrollable = false

[node name="MusicVolumeContainer" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer"]
margin_top = 85.0
margin_right = 288.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="SettingsContainer/AudioSettingsContainer/MusicVolumeContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Music Volume "

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/MusicVolumeContainer"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
scrollable = false

[node name="SFXVolumeContainer" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer"]
margin_top = 115.0
margin_right = 288.0
margin_bottom = 141.0

[node name="Label" type="Label" parent="SettingsContainer/AudioSettingsContainer/SFXVolumeContainer"]
margin_right = 156.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "SFX Volume   "

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/SFXVolumeContainer"]
margin_left = 160.0
margin_right = 288.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 100.0
scrollable = false

[node name="ActionsContainer" type="HBoxContainer" parent="."]
margin_top = 331.0
margin_right = 819.0
margin_bottom = 363.0
alignment = 1

[node name="BackButton" type="TextureButton" parent="ActionsContainer"]
margin_left = 335.0
margin_right = 399.0
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
script = ExtResource( 1 )

[node name="ApplyButton" type="TextureButton" parent="ActionsContainer"]
margin_left = 403.0
margin_right = 483.0
margin_bottom = 32.0
texture_normal = ExtResource( 10 )
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/FullScreenContainer/FullScreenButton" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/BorderlessContainer/BorderlessButton" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/VSYNCContainer/VSYNCButton" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/ResolutionContainer/ResolutionLine" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/FOVContainer/FOVSlider" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/VideoSettingsContainer/AntiAliasingContainer/AntiAliasingSlider" to="." method="_on_any_setting_interacted"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/ForwardContainer/ForwardButton" to="." method="_on_ForwardButton_button_down"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/BackwardContainer/BackwardButton" to="." method="_on_BackwardButton_button_down"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/LeftContainer/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/RightContainer/RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/JumpContainer/JumpButton" to="." method="_on_JumpButton_button_down"]
[connection signal="button_down" from="SettingsContainer/ControlsSettingsContainer/DashContainer/DashButton" to="." method="_on_DashButton_button_down"]
[connection signal="gui_input" from="SettingsContainer/ControlsSettingsContainer/SensitivityXContainer/SensitivityXSlider" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/ControlsSettingsContainer/SensitivityYContainer/SensitivityYSlider" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/AudioSettingsContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/AudioSettingsContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_any_setting_interacted"]
[connection signal="gui_input" from="SettingsContainer/AudioSettingsContainer/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_any_setting_interacted"]
[connection signal="pressed" from="ActionsContainer/BackButton" to="ActionsContainer/BackButton" method="_on_BackButton_pressed"]
[connection signal="gui_input" from="ActionsContainer/ApplyButton" to="." method="_on_any_setting_interacted"]
[connection signal="pressed" from="ActionsContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
